@@ -3,7 +3,7 @@
 INITDIR=/etc/rc.d/init.d
 HTTPDINIT=$INITDIR/httpd
 PHPDIR=/var/www/html
-DB2USER=db2inst2
+DB2USER=db2inst1
 
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@prefix@/java/com/firstworks/sqlrelay
 export CLASSPATH=$CLASSPATH:./:@prefix@/java
@@ -23,6 +23,7 @@ then
 	ARGS="localhost 8002 \"\" freetdstest freetdstest"
 	PHPARGS="host=localhost&port=8002&socket=&user=freetdstest&password=freetdstest"
 	sudo $INITDIR/sybase start
+	sleep 5
 	sudo sqlr-start -id freetdstest
 fi
 if ( test "$DB" = "interbase" )
@@ -65,6 +66,7 @@ then
 	ARGS="localhost 8008 \"\" oracle7test oracle7test"
 	PHPARGS="host=localhost&port=8008&socket=&user=oracle7test&password=oracle7test"
 	sudo $INITDIR/oracle start
+	sleep 5
 	sudo sqlr-start -id oracle7test
 fi
 if ( test "$DB" = "oracle8" )
@@ -80,6 +82,7 @@ then
 	ARGS="localhost 8009 \"\" oracle8test oracle8test"
 	PHPARGS="host=localhost&port=8009&socket=&user=oracle8test&password=oracle8test"
 	sudo $INITDIR/oracle start
+	sleep 5
 	sudo sqlr-start -id oracle8test
 fi
 if ( test "$DB" = "postgresql6" )
@@ -108,6 +111,7 @@ then
 	PHPARGS="localhost 8012 \"\" sybasetest sybasetest"
 	PHPARGS="host=localhost&port=8012&socket=&user=sybasetest&password=sybasetest"
 	sudo $INITDIR/sybase start
+	sleep 5
 	sudo sqlr-start -id sybasetest
 fi
 
